--- a/info/index.html
+++ b/info/index.html
@@ -59,7 +59,7 @@ hide_hero: true
             </div>
             <div class="col-lg-8 col-lg-offset-2">
                 <p>
-                    Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, hat uns bei diesem Vorhaben das <a class="highlight-grey" href="http://www.nexusinstitut.de/">Forschungsinstitut Nexus</a>  Berlin begleitet und alle fünf Workshops aus 2017 evaluiert und auf ihre Wirksamkeit hin überprüft. Die Ergebnisse, Instrumente und Methoden der Evaluation stellen wir  in diesem Abschlussbericht unter freier Lizenz zur Verfügung.  
+                    Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, hat uns bei diesem Vorhaben das <a class="highlight-grey" href="http://www.nexusinstitut.de/">Forschungsinstitut Nexus</a> aus Berlin begleitet, alle fünf Workshops aus 2017 evaluiert und auf ihre Wirksamkeit hin überprüft. Die Ergebnisse, Instrumente und Methoden der Evaluation stellen wir in diesem Abschlussbericht unter freier Lizenz zur Verfügung.  
                 </p>
                 <div class="btn-wrap">
                     <a href="/static/doc/Abschlussbericht_nexus.pdf"><button  class="btn btn-start color-2">Abschlussbericht herunterladen</button> </a>
@@ -91,7 +91,7 @@ hide_hero: true
                 <div class="col-lg-10 col-lg-offset-1 section-workshop">
                         <h2 class="section-headline">Workshops, Workshops, Workshops</h2>
                         <p>
-                            Jugendliche können sich in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten zu besiegt.
+                            Jugendliche können sich in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie  man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten besiegt.
                         </p>
                 </div>
             </div>
