--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -18,8 +18,8 @@ hide_hero: true
                     <h1 class="section-headline text-center">Wer kann bei den Demokratielaboren mitmachen?</h1>
                     <p class="text-center">
                        Wir richten uns hauptsächlich an <a class="highlight-grey" href="#Jugendliche">Jugendliche</a>. Für die Unterstützung von Jugendlichen bieten wir aber ergänzend Angebote für
-                        <a class="highlight-grey" href="#Jugendeinrichtung">p&auml;dagogische Fachkr&auml;fte und Jugendeinrichtungen</a> und 
-                        <a class="highlight-grey" href="#Jugendverband">Jugendverbände sowie Tr&auml;ger und Einrichtungen der Kinder- und Jugendarbeit</a>
+                        <a class="highlight-grey" href="#Jugendeinrichtung">Jugendeinrichtungen</a> und 
+                        <a class="highlight-grey" href="#Jugendverband">Pädagogische Fachkräfte in der Kinder- und Jugendarbeit</a>
                     </p>
                      <img  class="img-responsive" src="/static/img/mitmachen-start.png" alt="Wimmelbild CC BY-SA 4.0">
                 </div>
@@ -36,7 +36,7 @@ hide_hero: true
                         Du hast Lust dir unsere Workshops anzuschauen und Lust an ihnen teilzunehmen? Nice! Es gibt mehrere Möglichkeiten: Schau am besten erstmal auf unserer Startseite oder unter Workshops, ob wir bald in deiner N&auml;he sind. Falls nicht, frag einfach mal in einer Jugendeinrichtung deiner N&auml;he, ob sie uns einladen wollen oder schreib uns auf Instagram, Facebook oder Twitter an. Wenn du eine Mailadresse hast, kannst du uns natürlich auch eine <a class="highlight-white" href="mailto:info@demokratielabore.de">Mail schreiben.</a> Wir probieren dann in einer Einrichtung deiner N&auml;he etwas zu organisieren.
                     </p>
                     <p>
-                        Außerdem produzieren wir einen Youtube-Channel, auf dem du dich regelm&auml;ßig über netzpolitische Themen informieren kannst. <a class="highlight-white" href="https://www.youtube.com/channel/UCLGZBlrotKM_nuPPcvuR9SQ">Schau mal vorbei.</a>
+                        Außerdem produzieren wir einen Youtube-Channel, auf dem du dich regelm&auml;ßig über netzpolitische Themen informieren kannst. <a class="highlight-white" href="https://www.facebook.com/aboutblankvideo/">Schau mal vorbei.</a>
                    </p>
                     </div>
             </div>
