--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -19,7 +19,7 @@ hide_hero: true
                     <p class="text-center">
                        Wir richten uns hauptsächlich an <a class="highlight-grey" href="#Jugendliche">Jugendliche</a>. Für die Unterstützung von Jugendlichen bieten wir aber ergänzend Angebote für
                         <a class="highlight-grey" href="#Jugendeinrichtung">Jugendeinrichtungen</a> und 
-                        <a class="highlight-grey" href="#Jugendverband">Pädagogische Fachkräfte in der Kinder- und Jugendarbeit</a>
+                        <a class="highlight-grey" href="#Jugendverband">Pädagogische Fachkräfte in der Kinder- und Jugendarbeit</a> an.
                     </p>
                      <img  class="img-responsive" src="/static/img/mitmachen-start.png" alt="Wimmelbild CC BY-SA 4.0">
                 </div>
@@ -73,7 +73,7 @@ hide_hero: true
         <div class="col-lg-8 col-lg-offset-2 ">
             <h2 class="section-headline" > Für Fachkräfte in der Jugendarbeit</h2>
             <p class="text">
-                Wir wollen mit Euch herausfinden: Wie k&ouml;nnen Tr&auml;ger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweit&auml;gigen Workshop zeigen wir euch wie ihr mehr aus Daten machen k&ouml;nnt. Zus&auml;tzlich beraten wir gemeinn&uuml;tzige Organisationen, wie sie ihre digitalen F&auml;higkeiten vertiefen und aufbauen k&ouml;nnen. <br> 
+                Wir wollen mit Euch herausfinden: Wie k&ouml;nnen Tr&auml;ger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? Wir bieten wir verschiedene Workshops und Formate, in denen ihr eure Fähigkeiten im Bereich Digitalisierung, Daten und digitale Tools vertiefen und erweitern können.  <br> 
             </p>
             <div class="btn-wrap">
                 <a href="/angebot/schulung/"><button  class="btn btn-start color-2">Erfahrt mehr zu Schulungen</button> </a>
