--- a/team/index.html
+++ b/team/index.html
@@ -94,9 +94,9 @@ hide_hero: true
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="mailto:maria.reimer@okfn.de"><img class="img-circle member-avatar" alt="Maria Reimer" src="/img/avatars/maria.jpg"></a>
+                    <a class="members-image-wrap" href="mailto:tanja.zagel@okfn.de"><img class="img-circle member-avatar" alt="Tanja Zagel" src="/img/avatars/tanja.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:maria.reimer@okfn.de">Maria Reimer</a> </span>Projektkoordination <br> maria.reimer@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:tanja.zagel@okfn.de">Tanja Zagel</a> </span>Projektkoordination <br> tanja.zagel@okfn.de
                     </p>
                 </div>    
             </div> 
