--- a/workshops/index.html
+++ b/workshops/index.html
@@ -10,7 +10,7 @@ hide_hero: true
                 <div class="col-lg-10 col-lg-offset-1 section-workshop">
                     <h2 class="section-headline">Workshops, Workshops, Workshops</h2>
                     <p>
-                        Jugendliche können sich in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie  man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten zu besiegt.
+                        Jugendliche können sich in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie  man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten besiegt.
                     </p>
                 </div>
             </div>
@@ -34,7 +34,7 @@ hide_hero: true
                 <div class="col-lg-10 col-lg-offset-1 section-workshop text__white">
                     <h2 class="section-headline">Weitere Angebote</h2>
                     <p>
-                        Damit unsere Workshopangebote keine einmalige Sache bleiben, wollen wir unser Wissen auf allen Ebenen weitergeben. Dazu haben wir ein umfrangreiche weitere Anehbote. Schaut her!
+                        Damit unsere Workshopangebote keine einmalige Sache bleiben, wollen wir unser Wissen auf allen Ebenen weitergeben. Dazu haben wir ein umfrangreiche weitere Angebote. Schaut her!
                     </p>
                 </div>
             </div>
