--- a/workshops/index.html
+++ b/workshops/index.html
@@ -24,6 +24,9 @@ hide_hero: true
                             {% include workshop-teaser-tile.html post=post %}
                         </div>
                     {% endfor %}
+                    <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+                        {% include handbuch-teaser-tile.html post=post %}
+                    </div>
                 </div>
             </div>
         </div>
