--- a/presse/index.html
+++ b/presse/index.html
@@ -11,7 +11,9 @@ hide_hero: true
             <div class="col-lg-8 col-lg-offset-2">
                 <h1 class="text-center section-headline">Infomaterial</h1>
                 <p>
-                    <a class="btn-download" href="/presse/Projektbeschreibung_Demokratielabore.pdf" download="/presse/Projektbeschreibung_Demokratielabore.pdf">Projektbeschreibung Demokratielabore</a>
+                    <a class="btn-download" href="/presse/Projektbeschreibung_Demokratielabore.pdf" download="Projektbeschreibung_Demokratielabore.pdf">Projektbeschreibung Demokratielabore</a>
+                    <a class="btn-download" href="/presse/Infopaket Jugendeinrichtungen.pdf" download="Infopaket Jugendeinrichtungen.pdf">Infopaket Jugendeinrichtungen</a>
+                    <a class="btn-download" href="/presse/Infopaket Digital AGs.pdf" download="Infopaket Digital AGs.pdf">Infopaket Digital AGs</a>
                 <br>
                 <h1> Pressespiegel </h1>
                 <p>
