--- a/workshops/downloads/ungehoersam/editor/index.html
+++ b/workshops/downloads/ungehoersam/editor/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ungehörsam-Editor</title>
+    <meta name="description" content="Der Editor für QR-Code Ralleys mit verzweigten Pfaden">
     <!--The FontAwesome version is locked at 4.6.3 in the package.json file to keep this from breaking.-->
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.6.3/css/font-awesome.min.css">
