--- a/team/index.html
+++ b/team/index.html
@@ -48,13 +48,13 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:paula.glaser@okfn.de"><img class="img-circle member-avatar" alt="Paula Glaser" src="/img/avatars/paula.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Glaser</a> </span>Projektmanagerin Finanzen<br> paula.glaser@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:paula.glaser@okfn.de">Paula Glaser</a> </span>Projektmanagerin Organisation<br> paula.glaser@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:juliane.krueger@okfn.de"><img class="img-circle member-avatar" alt="Juliane Krueger" src="/img/avatars/juliane2.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:juliane.krueger@okfn.de">Juliane Kr&uuml;ger</a> </span>Projektassistenz Finanzen<br> juliane.krueger@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:juliane.krueger@okfn.de">Juliane Kr&uuml;ger</a> </span>Projektassistenz Organisation<br> juliane.krueger@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
