--- a/team/index.html
+++ b/team/index.html
@@ -96,7 +96,7 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:tanja.zagel@okfn.de"><img class="img-circle member-avatar" alt="Tanja Zagel" src="/img/avatars/tanja.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:tanja.zagel@okfn.de">Tanja Zagel</a> </span>Projektkoordination <br> tanja.zagel@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:tanja.zagel@okfn.de">Tanja Zagel</a> </span>Projektkoordinatorin<br> tanja.zagel@okfn.de
                     </p>
                 </div>    
             </div> 
