--- a/team/index.html
+++ b/team/index.html
@@ -78,13 +78,13 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:moritz.neujeffski@okfn.de"><img class="img-circle member-avatar" alt="Moritz Neujeffski" src="/img/avatars/moritz.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:moritz.neujeffski@okfn.de">Moritz Neujeffski</a> </span>Modulmanagement Bedarfsanalyse<br> moritz.neujeffski@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:moritz.neujeffski@okfn.de">Moritz Neujeffski</a> </span>Modulmanager Fachkräfteschulung<br> moritz.neujeffski@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:helene.hahn@okfn.de"><img class="img-circle member-avatar" alt="Helene Hahn" src="/img/avatars/helene.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:helene.hahn@okfn.de">Helene Hahn</a> </span>Modulleitung Bedarfsanalyse<br> helene.hahn@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:helene.hahn@okfn.de">Helene Hahn</a> </span>Modulleiterin Fachkräfteschulung<br> helene.hahn@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
