--- a/team/index.html
+++ b/team/index.html
@@ -72,7 +72,7 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:lea.pfau@okfn.de"><img class="img-circle member-avatar" alt="Lea Pfau" src="/img/avatars/lea.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:lea.pfau@okfn.de">Lea Pfai</a> </span>Studentische Mitarbeiterin<br> lea.pfau@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:lea.pfau@okfn.de">Lea Pfau</a> </span>Studentische Mitarbeiterin<br> lea.pfau@okfn.de
                     </p>
                 </div>                                                                                                 
                 <div class="members col-sm-6 col-lg-4">
