--- a/presse/index.html
+++ b/presse/index.html
@@ -14,6 +14,7 @@ hide_hero: true
                     <a class="btn-download" href="/presse/Projektbeschreibung_Demokratielabore.pdf" download="Projektbeschreibung_Demokratielabore.pdf">Projektbeschreibung Demokratielabore</a>
                     <a class="btn-download" href="/presse/Infopaket Jugendeinrichtungen.pdf" download="Infopaket Jugendeinrichtungen.pdf">Infopaket Jugendeinrichtungen</a>
                     <a class="btn-download" href="/presse/Infopaket Digital AGs.pdf" download="Infopaket Digital AGs.pdf">Infopaket Digital AGs</a>
+                    <a class="btn-download" href="/presse/Pressebilder_Demokratielabore.zip" download="Pressebilder_Demokratielabore.zip">Pressebilder Demokratielabore</a>
                 <br>
                 <h1> Pressespiegel </h1>
                 <p>
