--- a/info/index.html
+++ b/info/index.html
@@ -44,7 +44,7 @@ hide_hero: true
                     ... in Zeiten von Fake News, Hate Speech und Populismus das Internet für und mit jungen Menschen als positiven Gestaltungsraum für die politische Öffentlichkeit zurückzuerobern und die &ouml;ffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven Jugendlicher zu bereichern.
                 </p>
                 <p>
-                    ... Mitarbeiter*innen in Jugendeinrichtungen und Jugendverb&auml;nden neue Zug&auml;nge zur Digitalisierung zu erm&ouml;glichen, deren gesellschaftliche Bedeutung diskutieren und sie dazu zu bef&auml;higen, unsere Formate jederzeit eigenst&auml;ndig und unkompliziert umsätzen zu k&ouml;nnen.
+                    ... Mitarbeiter*innen in Jugendeinrichtungen und Jugendverb&auml;nden neue Zug&auml;nge zur Digitalisierung zu erm&ouml;glichen, deren gesellschaftliche Bedeutung diskutieren und sie dazu zu bef&auml;higen, unsere Formate jederzeit eigenst&auml;ndig und unkompliziert umsetzen zu k&ouml;nnen.
                 </p>
             </div>
         </div>
