--- a/info/index.html
+++ b/info/index.html
@@ -15,7 +15,7 @@ hide_hero: true
                             Wir zeigen Jugendlichen, wie sie mit digitalen Werkzeugen aktiv die Gesellschaft mitgestalten. Jugendliche können sich in unseren Workshops in Nachrichtenredaktionen verwandeln, lernen wie  man den öffentlichen Raum positiv einnimmt oder Cybertrolle mit Argumenten besiegt.
                         </p>
                     </div>
-                    <img  class="img-responsive" src="/static/img/wimmelbild.png" alt="Wimmelbild CC BY-SA 4.0">
+                    <img  class="img-responsive" src="/static/img/wimmelbild.jpg" alt="Wimmelbild CC BY-SA 4.0">
                     <div class="col-lg-8 col-lg-offset-2">
                         <p>
                             Die Demokratielabore sind ein Modellprojekt der <a class="highlight-grey" href="https://www.okfn.de/">Open Knowledge Foundation Deutschland</a>, das vom <a class="highlight-grey" href="https://www.bmfsfj.de/">Bundesministerium für Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a class="highlight-grey" href="https://www.demokratie-leben.de/">Demokratie leben!</a> und von der <a class="highlight-grey" href="https://www.bpb.de">Bundeszentrale für politische Bildung </a>gefördert wird.
