small changes in partner section

--- a/team/index.html
+++ b/team/index.html
@@ -128,6 +128,12 @@ hide_hero: true
                 </div>
 
                 <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="https://shop.nikkifaktur.de"> <img class="img-circle member-avatar" alt="Christoph Hoppenbrock" src="/img/avatars/nikkifaktur.gif"></a>
+                    <p class="members-image-content">
+                         <span class="speaker-name"><a class="text__blue" href="https://shop.nikkifaktur.de">Nikkifaktur</a></span>hat die fabelhaften Shirts und Turnbeutel produziert! 
+                    </p>
+                </div>
+                <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://bildbauer.de"> <img class="img-circle member-avatar" alt="Christoph Hoppenbrock" src="/img/avatars/bildbauer.jpg"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue" href="http://bildbauer.de">Christoph Hoppenbrock</a></span>hat die fantastischen Illustrationen gemacht 
