add anna to demolabsteam

--- a/team/index.html
+++ b/team/index.html
@@ -82,9 +82,9 @@ hide_hero: true
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="mailto:helene.hahn@okfn.de"><img class="img-circle member-avatar" alt="Helene Hahn" src="/img/avatars/helene.jpg"></a>
+                    <a class="members-image-wrap" href="mailto:anna.alberts@okfn.de"><img class="img-circle member-avatar" alt="Anna Alberts" src="/img/avatars/anna.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:helene.hahn@okfn.de">Helene Hahn</a> </span>Modulleiterin Fachkräfteschulung<br> helene.hahn@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:anna.alberts@okfn.de">Anna Alberts</a> </span>Modulleiterin Fachkräfteschulung<br> anna.alberts@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
