--- a/impressum/index.html
+++ b/impressum/index.html
@@ -54,7 +54,7 @@ hide_hero: true
 
                 <br>
 
-                <h2>Datenschutzerkl&auml;rung</h2>
+                <h2 id="datenschutzerklaerung">Datenschutzerkl&auml;rung</h2>
 
                 <p>I. Datenerhebung und Datenverarbeitung</p>
 
