--- a/presse/index.html
+++ b/presse/index.html
@@ -18,6 +18,9 @@ hide_hero: true
                 <br>
                 <h1> Pressespiegel </h1>
                 <p>
+                    22.05.2018 <br> 
+                    <a href="https://www.bmfsfj.de/bmfsfj/themen/familie/mit-digitalen-tools-die-welt-von-morgen-gestalten/123520" target="_blank">Pfingstlager der Deutschen Pfadfinderschaft Sankt Georg: Mit digitalen Tools die Welt von morgen gestalten</a> (bmfsfj.de)<br> <br> 
+                    04.11.2017<br>
                     06.01.2018 <br> 
                     <a href="https://www.fritz.de/programm/sendungen/sendungen/40/trackback/2017/180106-trb-550-henrike-moeller.html" target="_blank">Neues Webvideo-Format über Netzpolitik</a> (Fritz Radio/rbb)<br> <br> 
                     04.11.2017<br>
