--- a/presse/index.html
+++ b/presse/index.html
@@ -18,6 +18,8 @@ hide_hero: true
                 <br>
                 <h1> Pressespiegel </h1>
                 <p>
+                    24.05.2018 <br> 
+                    <a href="https://www.synergie.uni-hamburg.de/de/media/ausgabe05/synergie05-beitrag06-seitz-pfau-wolf.pdf" target="_blank">Demokratielabore. Mit digitalen Tools die Welt von morgen gestalten</a> (Synergie Fachmagazin)<br> <br>
                     22.05.2018 <br> 
                     <a href="https://www.bmfsfj.de/bmfsfj/themen/familie/mit-digitalen-tools-die-welt-von-morgen-gestalten/123520" target="_blank">Pfingstlager der Deutschen Pfadfinderschaft Sankt Georg: Mit digitalen Tools die Welt von morgen gestalten</a> (bmfsfj.de)<br> <br>
                     06.01.2018 <br> 
