--- a/presse/index.html
+++ b/presse/index.html
@@ -19,7 +19,7 @@ hide_hero: true
                 <h1> Pressespiegel </h1>
                 <p>
                     29.05.2018 <br> 
-                    <a href="https://www.regio-tv.de/video_video,-jugendliche-entwickeln-onlinespiel-_vidid,146976.html" target="_blank">Jugendliche entwickeln Onlinespiel</a> (Synergie Fachmagazin)<br> <br>
+                    <a href="https://www.regio-tv.de/video_video,-jugendliche-entwickeln-onlinespiel-_vidid,146976.html" target="_blank">Jugendliche entwickeln Onlinespiel</a> (Regio TV Schwaben)<br> <br>
                     24.05.2018 <br> 
                     <a href="https://www.synergie.uni-hamburg.de/de/media/ausgabe05/synergie05-beitrag06-seitz-pfau-wolf.pdf" target="_blank">Demokratielabore. Mit digitalen Tools die Gesellschaft von morgen gestalten</a> (Synergie Fachmagazin)<br> <br>
                     22.05.2018 <br> 
