--- a/presse/index.html
+++ b/presse/index.html
@@ -18,6 +18,8 @@ hide_hero: true
                 <br>
                 <h1> Pressespiegel </h1>
                 <p>
+                    12.06.2018 <br> 
+                    <a href="https://www.jugendhilfeportal.de/fokus/digitalisierung-und-medien/artikel/demokratielabore-workshops-rund-um-digitalisierung-und-gesellschaftliches-miteinander/" target="_blank">Demokratielabore: Workshops rund um Digitalisierung und gesellschaftliches Miteinander</a> (Jugendhilfeportal)<br> <br>
                     29.05.2018 <br> 
                     <a href="https://www.regio-tv.de/video_video,-jugendliche-entwickeln-onlinespiel-_vidid,146976.html" target="_blank">Jugendliche entwickeln Onlinespiel</a> (Regio TV Schwaben)<br> <br>
                     24.05.2018 <br> 
