--- a/team/index.html
+++ b/team/index.html
@@ -22,9 +22,9 @@ hide_hero: true
         <div class="container text__black">
             <h1 class="text-center section-headline">Und das sind wir</h1>
                 <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="mailto:sebastian.seitz@okfn.de"> <img class="img-circle member-avatar" alt="Sebastian Seitz" src="/img/avatars/sebastian.jpg"></a>
+                    <a class="members-image-wrap" href="mailto:tanja.zagel@okfn.de"> <img class="img-circle member-avatar" alt="Tanja Zagel" src="/img/avatars/tanja.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="mailto:sebastian.seitz@okfn.de">Sebastian Seitz</a></span>Projektleiter <br> sebastian.seitz@okfn.de
+                         <span class="speaker-name"><a class="text__blue" href="mailto:tanja.zagel@okfn.de">Tanja Zagel</a></span>Projektleiterin <br> tanja.zagel@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
@@ -93,12 +93,12 @@ hide_hero: true
                         <span class="speaker-name"><a class="text__blue"  href="mailto:knut.perseke@okfn.de">Knut Perseke</a> </span>Tech Lead<br> knut.perseke@okfn.de
                     </p>
                 </div>
-                <div class="members col-sm-6 col-lg-4">
+                <!--<div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:tanja.zagel@okfn.de"><img class="img-circle member-avatar" alt="Tanja Zagel" src="/img/avatars/tanja.jpg"></a>
                     <p class="members-image-content">
                         <span class="speaker-name"><a class="text__blue"  href="mailto:tanja.zagel@okfn.de">Tanja Zagel</a> </span>Projektkoordinatorin<br> tanja.zagel@okfn.de
                     </p>
-                </div>    
+                </div> -->   
             </div> 
         </div>             
     </div>
