--- a/team/index.html
+++ b/team/index.html
@@ -111,45 +111,45 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://medialepfade.de"><img class="img-circle member-avatar" alt="Mediale Pfade" src="/img/avatars/medialepfade.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="http://medialepfade.de">medialepfade.org</a></span>unterstützten uns 2017 bei der pädagogischen Ausrichtung
+                        <span class="speaker-name"><a class="text__blue" href="http://medialepfade.de">medialepfade.org</a></span>unterstützten uns 2017 und 2018 bei der pädagogischen Ausrichtung
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="https://www.nexusinstitut.de/"><img class="img-circle member-avatar" alt="Nexus Institut" src="/img/avatars/nexus.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Nexus Institut</a> </span>entwickelten 2017 die Evaluation der Workshops
+                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Nexus Institut</a> </span>führten 2017 die Wirksamkeitsanalyse unserer Workshops durch.
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="https://www.netzpolitik.org/"><img class="img-circle member-avatar" alt="Nexus Institut" src="/img/avatars/netzpolitik.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="https://www.netzpolitik.org/e">Netzpolitik</a> </span>entwickeln die inhaltliche Ausrichtung des Youtube-Channels
+                        <span class="speaker-name"><a class="text__blue" href="https://www.netzpolitik.org/e">Netzpolitik</a> </span>entwickelten die inhaltliche Ausrichtung unseres Youtube-Channels about:blank.
                     </p>
                 </div>
 
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="https://shop.nikkifaktur.de"> <img class="img-circle member-avatar" alt="Christoph Hoppenbrock" src="/img/avatars/nikkifaktur.gif"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="https://shop.nikkifaktur.de">Nikkifaktur</a></span>hat die fabelhaften Shirts und Turnbeutel produziert! 
+                         <span class="speaker-name"><a class="text__blue" href="https://shop.nikkifaktur.de">Nikkifaktur</a></span>hat unsere fabelhaften Shirts und Turnbeutel produziert! 
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://bildbauer.de"> <img class="img-circle member-avatar" alt="Christoph Hoppenbrock" src="/img/avatars/bildbauer.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://bildbauer.de">Christoph Hoppenbrock</a></span>hat die fantastischen Illustrationen gemacht 
+                         <span class="speaker-name"><a class="text__blue" href="http://bildbauer.de">Christoph Hoppenbrock</a></span>hat die fantastischen Illustrationen gemacht. 
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://vonspree.de"> <img class="img-circle member-avatar" alt="vonSpree" src="/img/avatars/vonspree.gif"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://bildbauer.de">von Spree</a></span>haben die schönen Teaser-Videos für die Workshops gemacht
+                         <span class="speaker-name"><a class="text__blue" href="http://bildbauer.de">von Spree</a></span>haben die schönen Teaser-Videos für die Workshops gemacht.
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://thisisnoteden.de"> <img class="img-circle member-avatar" alt="Marie Wolf" src="/img/avatars/marie_alex.gif"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue" href="http://thisisnoteden.com/">Marie Wolf 
-                         &amp; Alex Köpke</a></span>übernahm die Gestaltung unseres Handbuchs und der Bedarfsanalyse in Rekordzeit
+                         &amp; Alex Köpke</a></span>übernahmen 2017 die Gestaltung unseres Handbuchs und der Bedarfsanalyse in Rekordzeit.
                     </p>
                 </div>
             </div> 
