--- a/team/index.html
+++ b/team/index.html
@@ -111,13 +111,13 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://medialepfade.de"><img class="img-circle member-avatar" alt="Mediale Pfade" src="/img/avatars/medialepfade.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="http://medialepfade.de">medialepfade.org</a></span>unterstützten uns 2017 und 2018 bei der pädagogischen Ausrichtung
+                        <span class="speaker-name"><a class="text__blue" href="http://medialepfade.de">medialepfade.org</a></span>unterstützten uns 2017 und 2018 bei der pädagogischen Ausrichtung.
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="https://www.nexusinstitut.de/"><img class="img-circle member-avatar" alt="Nexus Institut" src="/img/avatars/nexus.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Nexus Institut</a> </span>führten 2017 die Wirksamkeitsanalyse unserer Workshops durch.
+                        <span class="speaker-name"><a class="text__blue" href="https://nexusinstitut.de">Nexus Institut</a> </span>führten 2017 die Wirksamkeitsanalyse unserer Workshops durch.
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
