--- a/team/index.html
+++ b/team/index.html
@@ -142,7 +142,7 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://vonspree.de"> <img class="img-circle member-avatar" alt="vonSpree" src="/img/avatars/vonspree.gif"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://bildbauer.de">von Spree</a></span>haben die schönen Teaser-Videos für die Workshops gemacht.
+                         <span class="speaker-name"><a class="text__blue" href="http://vonspree.de">von Spree</a></span>haben die schönen Teaser-Videos für die Workshops gemacht.
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
