--- a/team/index.html
+++ b/team/index.html
@@ -152,6 +152,18 @@ hide_hero: true
                          &amp; Alex Köpke</a></span>übernahmen 2017 die Gestaltung unseres Handbuchs und der Bedarfsanalyse in Rekordzeit.
                     </p>
                 </div>
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="http://polyspektiv.eu/"> <img class="img-circle member-avatar" alt="Polyspektiv" src="/img/avatars/polyspektiv.png"></a>
+                    <p class="members-image-content">
+                         <span class="speaker-name"><a class="text__blue" href="http://polyspektiv.eu/">Polyspektiv</a></span>entwickelten mit uns gemeinsam den Workshop "Auf Mikas Spuren".
+                    </p>
+                </div>
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="https://stuhlkreisrevolte.de/"> <img class="img-circle member-avatar" alt="stuhlkreis_revolte" src="/img/avatars/stuhlkreis_revolte.jpg"></a>
+                    <p class="members-image-content">
+                         <span class="speaker-name"><a class="text__blue" href="https://stuhlkreisrevolte.de/">stuhlkreis_revolte</a></span>unterstützt uns regelmäßig mit Teamer*innen bei unseren Workshops.
+                    </p>
+                </div>
             </div> 
         </div>
     </div>             
