--- a/zeltlager/index.html
+++ b/zeltlager/index.html
@@ -12,10 +12,10 @@ hide_hero: true
       </div>
     </div>
     <div class="container jumbotron fond__white">
-    <div class="col-lg-5 col-lg-offset-2">
+    <div class="col-lg-5 col-lg-offset-2 col-md-6 col-md-offset-1">
       <p>Während unserer Workshops auf dem <a href="https://demokratielabore.de/blog/pfingstlager-dpsg">Pfingstlager der DPSG in Westernohe</a> im Mai 2018 kam uns die Idee, unseren Workshop <a href="https://demokratielabore.de/workshops/game-of-thoughts">Game of Thoughts</a>, ein Format zur Entwicklung von digitalen Erklärspielen, für mehr Jugendverbände zugänglich zu machen. Darum haben wir ein Tutorial für die Durchführung des Workshops auf Zeltlagern (ohne Internet) geschrieben.</p>
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-3 col-md-offset-1 col-sm-4 col-sm-offset-3">
       <img class="img-responsive" src="/static/img/konsolera.png" alt="Konsolenfrau-Illustration CC BY-SA 4.0">
     </div>
     </div>
@@ -57,7 +57,7 @@ hide_hero: true
         </ul>
         <p>Alle Materialien sind unter folgendem Link online einsehbar und können jederzeit kostenfrei heruntergeladen und angepasst werden: <a href="https://demokratielabore.de/workshops/game-of-thoughts">demokratielabore.de/workshops/game-of-thoughts</a></p>
       </div>
-      <div class="col-lg-2 col-lg-offset-5">
+      <div class="col-sm-2 col-sm-offset-5">
         <img class="img-responsive" src="/static/img/kontroller.png" alt="Kontroller-Illustration CC BY-SA 4.0">
       </div>
     </div>
@@ -349,7 +349,7 @@ hide_hero: true
       </ul>
       <p>Viel Spaß bei der Durchführung!</p>
     </div>
-    <div class="col-lg-2 col-lg-offset-5">
+    <div class="col-sm-4 col-sm-offset-4 col-lg-2 col-lg-offset-5">
       <img class="img-responsive" src="/static/img/alpaka.png" alt="Alpaka-Illustration CC BY-SA 4.0">
     </div>
   </div>
