--- a/team/index.html
+++ b/team/index.html
@@ -158,12 +158,25 @@ hide_hero: true
                          <span class="speaker-name"><a class="text__blue" href="http://polyspektiv.eu/">Polyspektiv</a></span>entwickelten mit uns gemeinsam den Workshop "Auf Mikas Spuren".
                     </p>
                 </div>
-                <!--<div class="members col-sm-6 col-lg-4">
+                <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="https://stuhlkreisrevolte.de/"> <img class="img-circle member-avatar" alt="stuhlkreis_revolte" src="/img/avatars/stuhlkreis_revolte.jpg"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue" href="https://stuhlkreisrevolte.de/">stuhlkreis_revolte</a></span>unterstützt uns regelmäßig mit Teamer*innen bei unseren Workshops.
                     </p>
-                </div> -->
+                </div>
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="http://www.creative-gaming.eu/"> <img class="img-circle member-avatar" alt="Creative Gaming" src="/img/avatars/Creative-Gaming.jpg"></a>
+                    <p class="members-image-content">
+                         <span class="speaker-name"><a class="text__blue" href="http://www.creative-gaming.eu/">Creative Gaming</a></span>unterstützt uns bei vielen Workshop-Durchführungen.
+                    </p>
+                </div>
+                </div>
+                <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap"> <img class="img-circle member-avatar" alt="Jennifer L. Hicks" src="/img/avatars/Jennifer-Hicks.jpg"></a>
+                    <p class="members-image-content">
+                         <span class="speaker-name"><a class="text__blue">Jennifer L. Hicks</a></span>entwickelte die Invasion der Cybertrolle.
+                    </p>
+                </div>
             </div> 
         </div>
     </div>             
