--- a/team/index.html
+++ b/team/index.html
@@ -171,7 +171,7 @@ hide_hero: true
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
-                    <img class="img-circle member-avatar" alt="Jennifer L. Hicks" src="/img/avatars/Jennifer-Hicks.jpg">
+                    <a class="members-image-wrap" href=""> <img class="img-circle member-avatar" alt="Jennifer L. Hicks" src="/img/avatars/Jennifer-Hicks.jpg"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue">Jennifer L. Hicks</a></span>entwickelte die Invasion der Cybertrolle.
                     </p>
