--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -19,7 +19,7 @@ hide_hero: true
                     <p class="text-center">
                        Wir richten uns hauptsächlich an <a class="highlight-grey" href="#Jugendliche">Jugendliche</a>. Für die Unterstützung von Jugendlichen bieten wir aber ergänzend Angebote für
                         <a class="highlight-grey" href="#Jugendeinrichtung">Jugendeinrichtungen</a> und 
-                        <a class="highlight-grey" href="#Jugendverband">Pädagogische Fachkräfte in der Kinder- und Jugendarbeit</a> an.
+                        <a class="highlight-grey" href="#Jugendverband">pädagogische Fachkräfte in der Kinder- und Jugendarbeit</a> an.
                     </p>
                      <img  class="img-responsive" src="/static/img/mitmachen-start.png" alt="Wimmelbild CC BY-SA 4.0">
                 </div>
@@ -33,7 +33,7 @@ hide_hero: true
                 <div class="col-lg-8 col-lg-offset-2 text__white">
                     <h2 class="section-headline">Für Jugendliche</h2>
                     <p class="text">
-                        Du hast Lust dir unsere Workshops anzuschauen und Lust an ihnen teilzunehmen? Nice! Es gibt mehrere Möglichkeiten: Schau am besten erstmal auf unserer Startseite oder unter Workshops, ob wir bald in deiner N&auml;he sind. Falls nicht, frag einfach mal in einer Jugendeinrichtung deiner N&auml;he, ob sie uns einladen wollen oder schreib uns auf Instagram, Facebook oder Twitter an. Wenn du eine Mailadresse hast, kannst du uns natürlich auch eine <a class="highlight-white" href="mailto:info@demokratielabore.de">Mail schreiben.</a> Wir probieren dann in einer Einrichtung deiner N&auml;he etwas zu organisieren.
+                        Du hast Lust dir unsere Workshops anzuschauen und an ihnen teilzunehmen? Nice! Es gibt mehrere Möglichkeiten: Schau am besten erstmal auf unserem Terminkalender auf der Startseite, ob wir bald in deiner N&auml;he sind. Falls nicht, frag einfach mal in einer Jugendeinrichtung in deiner N&auml;he, ob sie uns einladen wollen oder schreib uns auf Facebook oder Twitter an. Wenn du eine Mailadresse hast, kannst du uns natürlich auch eine <a class="highlight-white" href="mailto:info@demokratielabore.de">Mail schreiben.</a> Wir probieren dann in einer Einrichtung deiner N&auml;he etwas zu organisieren.
                     </p>
                     <p>
                         Außerdem produzieren wir einen Youtube-Channel, auf dem du dich regelm&auml;ßig über netzpolitische Themen informieren kannst. <a class="highlight-white" href="https://www.facebook.com/aboutblankvideo/">Schau mal vorbei.</a>
@@ -57,7 +57,7 @@ hide_hero: true
                  </p>
                 <p>
                     <b>Schritt 3: </b> <br>
-                    Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgew&auml;hlten Workshops zu schulen. Amm darauffolgenden Tag findet die erste Durchf&uuml;hrung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchf&uuml;hrung in eurer Einrichtung stehen wir euch deshalb gerne zur Seite und k&ouml;nnen euch f&uuml;r weitere Durchl&auml;ufe sowohl umfangreiche Materialien  als auch finanzielle Unterst&uuml;tzung anbieten.         
+                    Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgew&auml;hlten Workshops zu schulen. Am darauffolgenden Tag findet die erste Durchf&uuml;hrung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchf&uuml;hrung in eurer Einrichtung stehen wir euch deshalb gerne zur Seite und k&ouml;nnen euch f&uuml;r weitere Durchl&auml;ufe sowohl umfangreiche Materialien  als auch finanzielle Unterst&uuml;tzung anbieten.         
                 </p>
                 <p>
                     <b>Wie geht es dann weiter? </b> <br>
@@ -73,7 +73,7 @@ hide_hero: true
         <div class="col-lg-8 col-lg-offset-2 ">
             <h2 class="section-headline" > Für Fachkräfte in der Jugendarbeit</h2>
             <p class="text">
-                Wir wollen mit Euch herausfinden: Wie k&ouml;nnen Tr&auml;ger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? Wir bieten wir verschiedene Workshops und Formate, in denen ihr eure Fähigkeiten im Bereich Digitalisierung, Daten und digitale Tools vertiefen und erweitern können.  <br> 
+                Wir wollen mit euch herausfinden: Wie k&ouml;nnen Tr&auml;ger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteur*innen im außerschulischen Bildungsbereich sichtbarer? Wir bieten wir verschiedene Workshops und Formate, in denen ihr eure Fähigkeiten im Bereich Digitalisierung, Daten und digitale Tools vertiefen und erweitern können.  <br> 
             </p>
             <div class="btn-wrap">
                 <a href="/angebot/schulung/"><button  class="btn btn-start color-2">Erfahrt mehr zu Schulungen</button> </a>
