--- a/team/index.html
+++ b/team/index.html
@@ -22,9 +22,9 @@ hide_hero: true
         <div class="container text__black">
             <h1 class="text-center section-headline">Und das sind wir</h1>
                 <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="mailto:tanja.zagel@okfn.de"> <img class="img-circle member-avatar" alt="Tanja Zagel" src="/img/avatars/tanja.jpg"></a>
+                    <a class="members-image-wrap" href="mailto:markus.neuschaefer@okfn.de"> <img class="img-circle member-avatar" alt="Markus Neuschäfer" src="/img/avatars/markus.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="mailto:tanja.zagel@okfn.de">Tanja Zagel</a></span>Projektleiterin <br> tanja.zagel@okfn.de
+                         <span class="speaker-name"><a class="text__blue" href="mailto:markus.neuschaefer@okfn.de">Tanja Zagel</a></span>Projektleiter <br> markus.neuschaefer@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
