--- a/team/index.html
+++ b/team/index.html
@@ -24,7 +24,7 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:markus.neuschaefer@okfn.de"> <img class="img-circle member-avatar" alt="Markus Neuschäfer" src="/img/avatars/markus.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="mailto:markus.neuschaefer@okfn.de">Tanja Zagel</a></span>Projektleiter <br> markus.neuschaefer@okfn.de
+                         <span class="speaker-name"><a class="text__blue" href="mailto:markus.neuschaefer@okfn.de">Markus Neuschäfer</a></span>Projektleiter <br> markus.neuschaefer@okfn.de
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
